syntax = "proto3";

package space.exploration.mars.rover;

message InstructionPayload {
    message TargetPackage {
        int32 roverModule = 1;
        int32 estimatedPowerUsage = 2;
        string action = 3;
        bytes auxiliaryData = 4;
    }

    int64 timeStamp = 1;
    bool SOS = 2;
    repeated TargetPackage targets = 3;
}