syntax="proto3";

package space.exploration.mars.rover.communication;

message RoverStatus{
	int64 SCET = 1;
	int64 ert = 2;
	int32 solNumber = 3;
	Location location = 4;
	int32 batteryLevel = 5;
	int32 moduleReporting = 6;
	string notes = 7;
	bytes moduleMessage = 8;
	
	message Location{
		int32 x = 1;
		int32 y = 2;
	}

}